[package]
name = "bevy-steamworks"
version = "0.12.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"
description = "A Bevy plugin for integrating with the Steamworks SDK."
repository = "https://github.com/HouraiTeahouse/bevy-steamworks"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "steam"]

[features]
default = []
serde = ["steamworks/serde"]

[dependencies]
bevy_log = "0.15"
bevy_app = "0.15"
bevy_ecs = "0.15"
bevy_utils = "0.15"
steamworks = "0.11"

[dev-dependencies]
bevy = "0.15"
