[package]
name = "bevy-steamworks"
version = "0.15.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"
description = "A Bevy plugin for integrating with the Steamworks SDK."
repository = "https://github.com/HouraiTeahouse/bevy-steamworks"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "steam"]

[features]
default = []
serde = ["steamworks/serde"]

[dependencies]
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
steamworks = "0.12.2"

[dev-dependencies]
bevy = "0.17"
