[package]
name = "bevy-steamworks"
version = "0.17.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"
description = "A Bevy plugin for integrating with the Steamworks SDK."
repository = "https://github.com/HouraiTeahouse/bevy-steamworks"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "steam"]

[features]
default = []
serde = ["steamworks/serde"]

[dependencies]
bevy_app = { version = "0.19", default-features = false }
bevy_ecs = { version = "0.19", default-features = false }
steamworks = "0.13.1"

[dev-dependencies]
# `ui_picking` enables the UI picking backend so that `Pointer<..>` events (used by
# the observers in `examples/lobby.rs`) fire on UI nodes. It is not in Bevy's defaults.
bevy = { version = "0.19", features = ["ui_picking"] }
